28.0.4
------
(RB=1868606)
defined SchemaAnnotationHandler interface for custom users to implement

28.0.3
------
(RB=1877796)
Clean generated dirs in Pegasus sub-projects without the Pegasus plugin

(RB=1874215)
Fix incorrect PDL encoding for bytes default values

28.0.2
------
(RB=1876286)
Expose some methods for use in pemberly-api

28.0.1
------
(RB=1869428)
Remove RestResponse.NO_RESPONSE.

28.0.0
-------
(RB=1855849)
Wire up symbol table providers on client and server. This will enable us to inject a runtime symbol table lookup system via container Add tool to generate symbol tables at runtime

27.7.18
-------
(RB=1754676)
Introduce RequestFinalizer API and server-side RequestFinalizerTransportDispatcher.

(RB=1808820)
Add ClientRequestFinalizerFilter to finalize requests on the client-side.

27.7.17
-------
(RB=1866668)
Remove dependency on protobuf artifact, to avoid runtime errors with dependencies of pegasus that may depend on other protobuf versions. Instead extract relevant parts of protobuf code into a separate li-protobuf module.

(RB=1852698)
Support configurable encoding styles for PDL

27.7.16
-------
(RB=1411984)
Make Pegasus Java 8 and Java 11 compatible

27.7.15
-------
(RB=1853192)
Update PDL schema parser and encoder to allow properties with dots in them. Properties with dots are escaped using back-tick ` character.

(RB=1854466)
Optimizing UriBuilder & validatePathKeys.

27.7.14
-------
(RB=1854364)
LoadBalancer: when using empty d2ServicePath, use the default service path. Consolidating code between ZKFS and LastSeen code paths

27.7.13
-------
(RB=1855054)
Remove configure task for data template

(RB=1848734)
Adding JMX registration of D2 LoadBalancer components

27.7.12
-------
(RB=1851128)
Right size the DataObjectToObjectCache used for wrapped fields to avoid wasting memory.

27.7.11
-------
(RB=1847578)
Adding initial capacity to clientsToLoadBalance list and trackerClientMap to avoid expensive resize operations.
(RB=1843935)